Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4934

Assert in Http2Stream::do_io_close() when active timeout

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.1, 7.0.0
    • HTTP/2
    • None

    Description

      Program received signal SIGABRT, Aborted.
      0x00007ffff26e75f7 in raise () from /lib64/libc.so.6
      (gdb) bt
      #0  0x00007ffff26e75f7 in raise () from /lib64/libc.so.6
      #1  0x00007ffff26e8ce8 in abort () from /lib64/libc.so.6
      #2  0x00007ffff4bf7c4b in ink_abort (message_format=0x7ffff4c25700 "%s:%d: failed assertion `%s`") at ink_error.cc:79
      #3  0x00007ffff4bf2bd7 in _ink_assert (expression=0xb43920 "get_state() == HTTP2_STREAM_STATE_CLOSED", file=0xb436a0 "Http2Stream.cc", line=333)
          at ink_assert.cc:37
      #4  0x000000000075ef92 in Http2Stream::do_io_close (this=0x7fffe6492b40) at Http2Stream.cc:333
      #5  0x0000000000679b1d in HttpVCTable::cleanup_entry (this=0x7fffe69c8990, e=0x7fffe69c8990) at HttpSM.cc:216
      #6  0x0000000000679bde in HttpVCTable::cleanup_all (this=0x7fffe69c8990) at HttpSM.cc:227
      #7  0x00000000006b561f in HttpSM::kill_this (this=0x7fffe69c71e0) at HttpSM.cc:6756
      #8  0x000000000068f792 in HttpSM::main_handler (this=0x7fffe69c71e0, event=106, data=0x7fffe6492e88) at HttpSM.cc:2671
      #9  0x0000000000535f6c in Continuation::handleEvent (this=0x7fffe69c71e0, event=106, data=0x7fffe6492e88) at ../iocore/eventsystem/I_Continuation.h:153
      #10 0x000000000075d136 in Http2Stream::main_event_handler (this=0x7fffe6492b40, event=106, edata=0x608e00014ce0) at Http2Stream.cc:68
      #11 0x0000000000535f6c in Continuation::handleEvent (this=0x7fffe6492b40, event=2, data=0x608e00014ce0) at ../iocore/eventsystem/I_Continuation.h:153
      #12 0x0000000000a69c41 in EThread::process_event (this=0x7ffff0c65800, e=0x608e00014ce0, calling_code=2) at UnixEThread.cc:143
      #13 0x0000000000a6a491 in EThread::execute (this=0x7ffff0c65800) at UnixEThread.cc:225
      #14 0x0000000000a6858c in spawn_thread_internal (a=0x6008000156d0) at Thread.cc:84
      #15 0x00007ffff4e64ac8 in ?? () from /lib64/libasan.so.0
      #16 0x00007ffff349ddc5 in start_thread () from /lib64/libpthread.so.0
      #17 0x00007ffff27a828d in clone () from /lib64/libc.so.6
      (gdb) p get_state()
      $1 = HTTP2_STREAM_STATE_HALF_CLOSED_REMOTE
      

      Attachments

        Activity

          People

            masaori Masaori Koshiba
            masaori Masaori Koshiba
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 2h
                2h