TS-4934: Remove invalid assert